# gianturl-net

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yaml
api/: pyproject.toml
api/gianturl/: app.py  auth.py  config.py  encoding.py  errors.py  models.py
api/tests/: test_routes.py
api/ui/: index.html
api/ui/_app/: error.svelte-75179d3a.js  layout.svelte-dab71d4c.js  manifest.json  start-ffaf0be0.js  version.json
api/ui/_app/assets/pages/: index.svelte-6d2a62b6.css
api/ui/_app/chunks/: index-310d1a4c.js
api/ui/_app/pages/: index.svelte-b18f7fbc.js
gianturl/: app.py  config.py  crypto.py  encoding.py
tests/: test_routes.py
ui/: .gitignore  package.json  pnpm-lock.yaml  svelte.config.js
ui/public/: index.html
ui/public/_app/: error.svelte-f426a37b.js  layout.svelte-5b998262.js  manifest.json  start-1c508d37.js  version.json
ui/public/_app/assets/pages/: index.svelte-68632751.css
ui/public/_app/chunks/: index-09381fda.js  index-6437767e.js
ui/public/_app/pages/: index.svelte-653538e5.js
ui/src/: app.html
ui/src/routes/: index.svelte
